src/assets/scss/_custom.scss
// Here you can add other styles
.group-header { display: flex; align-items: center }
.group-header i.c-icon-custom-size { width: 32px !important; height: 32px !important; font-size: 32px !important; }
.group-header img.c-icon-custom-size { width: 32px !important; height: 32px !important; }
.group-header > .h4 { margin-bottom: 0px; margin-left: 10px }
.service-item .p-4 { padding: .5rem !important }
.service-item i.c-icon-custom-size { width: 48px !important; height: 48px !important; font-size: 48px !important; }
.service-item img.c-icon-custom-size { width: 48px !important; height: 48px !important; }

.c-sidebar-nav-icon img { height: 20px; width: 20px; vertical-align: top;}
.c-main { padding-top: 0; }
.c-main > .container-fluid { padding-top: 2rem; }
.tag {
  /*color: var(--primary);
  background-color: var(--primary);*/
  position: absolute;
  top: 1rem;
  right: -0.2rem;
  width: 3px;
  overflow: hidden;
  transition: all 0.2s ease-out;
  padding: 0;

  align-items: center;
  border-radius: 4px;
  display: inline-flex;
  font-size: .75rem;
  height: 2em;
  justify-content: center;
  line-height: 1.5;
  white-space: nowrap;

  .tag-text {
    display: none;
  }
}

.service-item:hover {
  .tag {
    width: auto;
    color: #ffffff;
    padding: 0 0.75em;

    .tag-text {
      display: block;
    }
  }
}

